# ivan_game

./: Cargo.toml  README.md  daily_planning.md  script_space.py
.github/workflows/: rust.yml
assets/characters/16PixelSlime/Aseprite/: BlueSlimeAttack.aseprite  BlueSlimeBorn.aseprite  BlueSlimeDie.aseprite  BlueSlimeHurt.aseprite  BlueSlimeIdle.aseprite  BlueSlimeIdle2.aseprite  BlueSlimeJump.aseprite  BlueSlimeWalking.aseprite
assets/maps/Tiny_Swords/: map.json
assets/maps/Untitled/: map.json
src/: app_state.rs  app_utils.rs  appstate.rs  buttons.rs  cards.rs  client.rs  collisions.rs  constants.rs  filling_circle_timer.rs  lib.rs  main.rs  networking.rs  particles.rs  pendulum.rs  player.rs  scene1.rs  scene4.rs  scene5.rs  server.rs  sprite_sheet_info.txt  tilemaps.rs  ui.rs
web/: index.html
web/favicon/: site.webmanifest
